fixed top nav on small view

--- a/lesson4/css/medium.css
+++ b/lesson4/css/medium.css
@@ -1,5 +1,5 @@
 /* Media Query for medium+ views */
-@media only screen and (min-width: 32.5em) {
+@media only screen and (min-width: 40em) {
 	.navigation {
 		display: flex;
 	}
@@ -18,21 +18,11 @@
 
 	/* preston */
 
-	.forecast-icons-box {
+	.forecast-icons-box img {
 		display: flex;
 	}
 
-	.forecast-icons-box li {
-		display: block; /* change state in small view */
-		flex: 1 1 auto;
+	.hide-on-small-view {
+		display: block;
 	}
-	.forecast-icons-box a {
-		text-align: center;
-	}
-
-	.forecast-icons-box img {
-		padding: 1em;
-	}
-
-	
 }
