--- a/lesson4/css/small.css
+++ b/lesson4/css/small.css
@@ -1,80 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400;1,700&family=Patua+One&family=Staatliches&display=swap');
+@media only screen and (max-width: 40em) {
 
-/* base */
 
-:root {
-	--viridian: #0AA0A8;
-	--celadon: #BEFFC7;
-	--turquoise: #A9D8B8;
-	--cambridge-blue: #A7C4B5;
-	--jet-black: #2F2D2E;
+	/* page */
 
-	--title-font: Staatliches, Helvetica, sans-serif;
-	--heading-font: 'Patua One', Georgia, serif;
-	--paragraph-font: Lato, Arial, sans-serif;
+	.forecast-icons-box img {
+		display: none;
+	}
+	
+	.hide-on-small-view {
+		display: none;
+	}
+
 
 }
 
-/* global */
-
-#content {
-	max-width: 100%;
-}
-
-
-/* Small/Phone View */
-
-nav {
-	text-align: center;
-	margin: 0 auto;
-	background-color: tomato;
-}
-.navigation {
-	list-style: none;
-	padding: 0;
-}/*
-.navigation li:first-child {
-	display: block;
-} */
-
-.navigation li {
-	display: none;
-}
-.navigation a {
-	display: block;
-	padding: 0.75rem;
-	text-align: left;
-	text-decoration: none;
-	color: black;
-	font-weight: 700;
-	transition: 0.5s;
-}
-.navigation a:hover {
-	color: white;
-	background-color: black;
-}
-
-/* the onclick JS toggles the .reponsive class from display none (.navigation li) to display block because the visible class is added to the end of the class list like this in HTML.
-  <ul class="navigation responsive">
-*/
-
-.visible nav {
-	max-width: 32em;
-}
-
-.visible li {
-	display: block;
-}
-
-
-/* preston */
-
-/* 5-day-forecast */
-
-.forecast-icons-box img {
-	display:none;
-}
-
-.forecast-icons-box li:first-child {
-	display: block;
-}
